2019-12-23  Richard Sandiford  <richard.sandiford@arm.com>

	* cvt.c (ocp_convert): Apply rvalue to the source of vector
	conversions.
	* typeck.c (build_reinterpret_cast_1): Likewise.

2019-12-19  Marek Polacek  <polacek@redhat.com>

	PR c++/92745 - bogus error when initializing array of vectors.
	* decl.c (reshape_init_r): For a nested compound literal, do
	call reshape_init_{class,array,vector}.

	PR c++/92974 - bogus location for enum and non-enum in ?: warning.
	* tree.c (build_min_non_dep): Use the location of NON_DEP when
	building the expression.

2019-12-20  Jakub Jelinek  <jakub@redhat.com>

	PR c++/92965
	* pt.c (invalid_nontype_parm_type_p): Call structural_type_p with
	explain=true only if emitting error.

	PR c++/92966
	* method.c (early_check_defaulted_comparison): Don't set
	DECL_MAYBE_DELETED when returning false.

	PR c++/92973
	* method.c (early_check_defaulted_comparison): For C++17 and earlier
	diagnose defaulted comparison operators.

	PR c++/92666
	* call.c (convert_arg_to_ellipsis): For floating point or
	decltype(nullptr) arguments call mark_rvalue_use.

	PR c++/92992
	* call.c (convert_arg_to_ellipsis): For decltype(nullptr) arguments
	that have side-effects use cp_build_compound_expr.

2019-12-20  Eric Botcazou  <ebotcazou@adacore.com>

	* decl2.c (c_parse_final_cleanups): Always call collect_source_ref on
	the main input filename.

2019-12-19  Julian Brown  <julian@codesourcery.com>
	    Cesar Philippidis  <cesar@codesourcery.com>

	* parser.c (cp_parser_omp_clause_name): Support attach and detach
	clauses.
	(cp_parser_omp_var_list_no_open): Add ALLOW_DEREF optional parameter.
	Parse deref if true.
	(cp_parser_omp_var_list): Add ALLOW_DEREF optional parameter.  Pass to
	cp_parser_omp_var_list_no_open.
	(cp_parser_oacc_data_clause): Support attach and detach clauses.
	Update call to cp_parser_omp_var_list_no_open.
	(cp_parser_oacc_all_clauses): Support attach and detach.
	(OACC_DATA_CLAUSE_MASK, OACC_ENTER_DATA_CLAUSE_MASK,