@@ -1,5 +1,11 @@
 2019-12-23  Richard Sandiford  <richard.sandiford@arm.com>
 
+	PR c++/92789
+	* typeck.c (structural_comptypes): Make sure that two vector types
+	agree on gnu_vector_type_p.
+
+2019-12-23  Richard Sandiford  <richard.sandiford@arm.com>
+
 	* cvt.c (ocp_convert): Apply rvalue to the source of vector
 	conversions.
 	* typeck.c (build_reinterpret_cast_1): Likewise.
